# MyElair

./: CHANGELOG.md  README English.md  README.md  pyproject.toml
archive/: calculate_prop.py  evaluate_mlflow.py  functional.py  functional_10c.py  model.py  model_10c.py  model_test.py  predict_cl.py  predict_cl_new.py  predict_cl_normrange.py  predict_fuze_model_folder.py  test_dbscan.py  test_dtauf.py  train.py  train_voxel.py  train_voxel_normrange.py  train_voxel_v2.py  utilis_10c.py  utils.py
archive/configs/: train.yaml  train_10c_v2.yaml  train_gamms.yaml  train_handcraft.yaml  train_handcraft_multiscale.yaml  train_ns2f.yaml  train_unionfind.yaml  train_unionfind_online.yaml  train_verti.yaml  train_verti_3c.yaml  train_verti_5c.yaml  train_verti_bin_hdf5.yaml  yaml_v6.yaml
archive/eclair_version/v13/: binary_plo.yaml  binary_plo_horssol.yaml  ex.yaml  ex_att.yaml  first_model.yaml  fisrt_model_all.yaml  model_v13.py  predict_cl_v13.py  predict_cl_v13_supprvoxel.py  train_v13.py  utils_v13.py
archive/eclair_version/v13_preprod/: evaluate_mlflow_preprod.py  first_model_preprod.yaml  functional_v13_preprod.py  functional_v13_preprod_outliers.py  predict_cl_v13_preprod.py  predict_v13_preprod_outliers_cleaned_fuze.py  utils_v13_preprod_outliers.py
archive/eclair_version/v13_sousech/: functional_v13_zmanaged.py  model_v13_plo_sousech.py  model_v13_testattention.py  plo_cross.yaml  train_v13_sousech.py  utils_v13_sousech.py
archive/fuze_training/: 10c.yaml  curbgutt.yaml
scripts/: check_psanp_bundles.py  config.yaml  functional.py  model.py  predict.py  train.py  utils.py
src/eclair/: __init__.py
src/eclair/plos/: __init__.py  gsvision.py
src/eclair/plos/model/: functional.py  model.py  utils.py
src/eclair/plos/predict/: config.yaml  dataset.py  evaluate_mlflow.json  evaluate_mlflow.py  plo_post_processing.py  predict.py
src/eclair/plos/psanp/: __init__.py  classifiers.py  register_stages.py
src/eclair/plos/train/: __init__.py  first_model.yaml  plo.yaml  train.py  utils.py
tests/integration/: test_classifiers.py  test_predict.py
tests/unit/plos/model/: test_functional.py
tests/unit/plos/predict/: test_evaluate_mlflow.py  test_predict.py  test_utils.py
